traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:13: error: ';' expected but 'else' found.
    } else if (getX() == 0) {
      ^TraversalZigZag:17: error: Missing closing brace `}' assumed here
} 
^