traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt: Int = 0
  var dir: Int = 0
  ecritMessage(cpt);
  while (getMondeHauteur()-1 != getY() || getMondeLargeur()-1 != getX()) {
    cpt += 1;
    if (dir == 0 && getX() != getMondeLargeur()-1) {
      setPos(getX()+1,getY()); ecritMessage(cpt);
    } else if (dir == 1 && getX() != 0) {
      setPos(getX()-1,getY()); ecritMessage(cpt);
    } else {
			(getX() == getMondeLargeur()-1) {
      dir = 1; setPos(getX(),getY()+1); cpt += 1; ecritMessage(cpt);
    } else if (getX() == 0) {
      dir = 0; setPos(getX(),getY()+1); cpt += 1; ecritMessage(cpt);
    }
  }
}